[package]
name = "chat-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
enum_glob_use = "deny"
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
unwrap_used = "deny"
cast_possible_truncation = "allow"
cast_possible_wrap = "allow"
cast_sign_loss = "allow"
cast_precision_loss = "allow"
significant_drop_tightening = { level = "allow", priority = 1 }
module_name_repetitions = "allow"
# This is just dumb
must_use_candidate = "allow"
# Sadly sqlx macros do not play nicely with clippy
missing_panics_doc = "allow"
# When impl Trait can be used in type aliases, remove this
future_not_send = "allow"
# Doesn't play nicely with tokio::select!
redundant_pub_crate = "allow"

[dependencies]
tokio = { version = "1", features = ["full", "parking_lot", "tracing"] }
tokio-stream = "0.1"
tracing = "0.1"
tracing-subscriber = "0.3"
bytes = "1.7"
axum = { version = "0.7", features = ["ws", "multipart", "tracing", "http2"] }
axum-extra = { version = "0.9", features = ["typed-header"] }
tower-http = { version = "0.6", features = ["limit", "cors", "trace"] }
http = "1.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8", features = [
    "runtime-tokio",
    "tls-rustls",
    "macros",
    "migrate",
    "postgres",
] }
chrono = { version = "0.4", default-features = false, features = [
    "alloc",
    "std",
    "clock",
] }
# Consider swapping to using object-store instead? https://crates.io/crates/object_store
aws-config = "1.5"
aws-sdk-s3 = "1.54"
secrecy = { version = "0.8", features = ["serde"] }
argon2 = { version = "0.5", features = ["std"] }
bitflags = { version = "2.6", features = ["serde"] }
futures = "0.3"
futures-util = "0.3"
jsonwebtoken = "9.3"
rs-snowflake = "0.6"
dotenvy = "0.15"
async-trait = "0.1"
rand = "0.8"
regex = "1.10"
enum_dispatch = "0.3"
derive_builder = "0.20"
slice-group-by = "0.3"
thiserror = "2"
mime = "0.3"
dashmap = "6.1"
color-eyre = "0.6"
data-url = "0.3"

[profile.dev.package.sqlx-macros]
opt-level = 3

[profile.dev.package.backtrace]
opt-level = 3

# Enable incremental compilation for dev builds to improve re-compilation time.
[profile.dev]
incremental = true

# Enable LTO for release builds to reduce binary size.
[profile.release]
lto = true
